--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.mikepenz.iconics:library:0.7.0@aar'
+    compile('com.mikepenz.materialdrawer:library:2.7.0@aar') {
+        transitive = true
+    }
+
+
 }
